3punto/GramaticaMatricesParser.py
# Generated from GramaticaMatrices.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GramaticaMatricesParser ( Parser ):

    grammarFileName = "GramaticaMatrices.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'*'", "'+'", "'-'", "'('", "')'", 
                     "'['", "','", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "NUMERO", "WS" ]

    RULE_programa = 0
    RULE_expresionMatriz = 1
    RULE_declaracionMatriz = 2
    RULE_asignacion = 3
    RULE_operacionMatriz = 4
    RULE_multiplicacion = 5
    RULE_suma = 6
    RULE_resta = 7
    RULE_primaria = 8
    RULE_matrizLiteral = 9
    RULE_fila = 10

    ruleNames =  [ "programa", "expresionMatriz", "declaracionMatriz", "asignacion", 
                   "operacionMatriz", "multiplicacion", "suma", "resta", 
                   "primaria", "matrizLiteral", "fila" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    ID=10
    NUMERO=11
    WS=12

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresionMatriz(self):
            return self.getTypedRuleContext(GramaticaMatricesParser.ExpresionMatrizContext,0)


        def EOF(self):
            return self.getToken(GramaticaMatricesParser.EOF, 0)

        def getRuleIndex(self):
            return GramaticaMatricesParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = GramaticaMatricesParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.expresionMatriz()
            self.state = 23
            self.match(GramaticaMatricesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionMatrizContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracionMatriz(self):
            return self.getTypedRuleContext(GramaticaMatricesParser.DeclaracionMatrizContext,0)


        def operacionMatriz(self):
            return self.getTypedRuleContext(GramaticaMatricesParser.OperacionMatrizContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(GramaticaMatricesParser.AsignacionContext,0)


        def getRuleIndex(self):
            return GramaticaMatricesParser.RULE_expresionMatriz

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresionMatriz" ):
                listener.enterExpresionMatriz(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresionMatriz" ):
                listener.exitExpresionMatriz(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresionMatriz" ):
                return visitor.visitExpresionMatriz(self)
            else:
                return visitor.visitChildren(self)




    def expresionMatriz(self):

        localctx = GramaticaMatricesParser.ExpresionMatrizContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expresionMatriz)
        try:
            self.state = 28
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 25
                self.declaracionMatriz()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.operacionMatriz()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 27
                self.asignacion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionMatrizContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GramaticaMatricesParser.ID, 0)

        def matrizLiteral(self):
            return self.getTypedRuleContext(GramaticaMatricesParser.MatrizLiteralContext,0)


        def getRuleIndex(self):
            return GramaticaMatricesParser.RULE_declaracionMatriz

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionMatriz" ):
                listener.enterDeclaracionMatriz(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionMatriz" ):
                listener.exitDeclaracionMatriz(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionMatriz" ):
                return visitor.visitDeclaracionMatriz(self)
            else:
                return visitor.visitChildren(self)




    def declaracionMatriz(self):

        localctx = GramaticaMatricesParser.DeclaracionMatrizContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracionMatriz)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(GramaticaMatricesParser.ID)
            self.state = 31
            self.match(GramaticaMatricesParser.T__0)
            self.state = 32
            self.matrizLiteral()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GramaticaMatricesParser.ID, 0)

        def expresionMatriz(self):
            return self.getTypedRuleContext(GramaticaMatricesParser.ExpresionMatrizContext,0)


        def getRuleIndex(self):
            return GramaticaMatricesParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = GramaticaMatricesParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(GramaticaMatricesParser.ID)
            self.state = 35
            self.match(GramaticaMatricesParser.T__0)
            self.state = 36
            self.expresionMatriz()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperacionMatrizContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicacion(self):
            return self.getTypedRuleContext(GramaticaMatricesParser.MultiplicacionContext,0)


        def getRuleIndex(self):
            return GramaticaMatricesParser.RULE_operacionMatriz

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperacionMatriz" ):
                listener.enterOperacionMatriz(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperacionMatriz" ):
                listener.exitOperacionMatriz(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperacionMatriz" ):
                return visitor.visitOperacionMatriz(self)
            else:
                return visitor.visitChildren(self)




    def operacionMatriz(self):

        localctx = GramaticaMatricesParser.OperacionMatrizContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_operacionMatriz)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.multiplicacion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramaticaMatricesParser.RULE_multiplicacion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProductoPuntoContext(MultiplicacionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaMatricesParser.MultiplicacionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def suma(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaMatricesParser.SumaContext)
            else:
                return self.getTypedRuleContext(GramaticaMatricesParser.SumaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProductoPunto" ):
                listener.enterProductoPunto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProductoPunto" ):
                listener.exitProductoPunto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProductoPunto" ):
                return visitor.visitProductoPunto(self)
            else:
                return visitor.visitChildren(self)



    def multiplicacion(self):

        localctx = GramaticaMatricesParser.MultiplicacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_multiplicacion)
        self._la = 0 # Token type
        try:
            localctx = GramaticaMatricesParser.ProductoPuntoContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.suma()
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 41
                self.match(GramaticaMatricesParser.T__1)
                self.state = 42
                self.suma()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SumaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramaticaMatricesParser.RULE_suma

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SumaRestaMatrizContext(SumaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaMatricesParser.SumaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def resta(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaMatricesParser.RestaContext)
            else:
                return self.getTypedRuleContext(GramaticaMatricesParser.RestaContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSumaRestaMatriz" ):
                listener.enterSumaRestaMatriz(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSumaRestaMatriz" ):
                listener.exitSumaRestaMatriz(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSumaRestaMatriz" ):
                return visitor.visitSumaRestaMatriz(self)
            else:
                return visitor.visitChildren(self)



    def suma(self):

        localctx = GramaticaMatricesParser.SumaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_suma)
        self._la = 0 # Token type
        try:
            localctx = GramaticaMatricesParser.SumaRestaMatrizContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.resta()
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3 or _la==4:
                self.state = 49
                _la = self._input.LA(1)
                if not(_la==3 or _la==4):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 50
                self.resta()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RestaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaria(self):
            return self.getTypedRuleContext(GramaticaMatricesParser.PrimariaContext,0)


        def getRuleIndex(self):
            return GramaticaMatricesParser.RULE_resta

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResta" ):
                listener.enterResta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResta" ):
                listener.exitResta(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitResta" ):
                return visitor.visitResta(self)
            else:
                return visitor.visitChildren(self)




    def resta(self):

        localctx = GramaticaMatricesParser.RestaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_resta)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.primaria()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimariaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramaticaMatricesParser.RULE_primaria

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VariableMatrizContext(PrimariaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaMatricesParser.PrimariaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(GramaticaMatricesParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableMatriz" ):
                listener.enterVariableMatriz(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableMatriz" ):
                listener.exitVariableMatriz(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableMatriz" ):
                return visitor.visitVariableMatriz(self)
            else:
                return visitor.visitChildren(self)


    class ParentesisContext(PrimariaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaMatricesParser.PrimariaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operacionMatriz(self):
            return self.getTypedRuleContext(GramaticaMatricesParser.OperacionMatrizContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParentesis" ):
                listener.enterParentesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParentesis" ):
                listener.exitParentesis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParentesis" ):
                return visitor.visitParentesis(self)
            else:
                return visitor.visitChildren(self)


    class LiteralMatrizContext(PrimariaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramaticaMatricesParser.PrimariaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def matrizLiteral(self):
            return self.getTypedRuleContext(GramaticaMatricesParser.MatrizLiteralContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteralMatriz" ):
                listener.enterLiteralMatriz(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteralMatriz" ):
                listener.exitLiteralMatriz(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteralMatriz" ):
                return visitor.visitLiteralMatriz(self)
            else:
                return visitor.visitChildren(self)



    def primaria(self):

        localctx = GramaticaMatricesParser.PrimariaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_primaria)
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                localctx = GramaticaMatricesParser.ParentesisContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.match(GramaticaMatricesParser.T__4)
                self.state = 59
                self.operacionMatriz()
                self.state = 60
                self.match(GramaticaMatricesParser.T__5)
                pass
            elif token in [10]:
                localctx = GramaticaMatricesParser.VariableMatrizContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(GramaticaMatricesParser.ID)
                pass
            elif token in [7]:
                localctx = GramaticaMatricesParser.LiteralMatrizContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.matrizLiteral()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrizLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fila(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramaticaMatricesParser.FilaContext)
            else:
                return self.getTypedRuleContext(GramaticaMatricesParser.FilaContext,i)


        def getRuleIndex(self):
            return GramaticaMatricesParser.RULE_matrizLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrizLiteral" ):
                listener.enterMatrizLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrizLiteral" ):
                listener.exitMatrizLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatrizLiteral" ):
                return visitor.visitMatrizLiteral(self)
            else:
                return visitor.visitChildren(self)




    def matrizLiteral(self):

        localctx = GramaticaMatricesParser.MatrizLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_matrizLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(GramaticaMatricesParser.T__6)
            self.state = 67
            self.fila()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 68
                self.match(GramaticaMatricesParser.T__7)
                self.state = 69
                self.fila()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(GramaticaMatricesParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMERO(self, i:int=None):
            if i is None:
                return self.getTokens(GramaticaMatricesParser.NUMERO)
            else:
                return self.getToken(GramaticaMatricesParser.NUMERO, i)

        def getRuleIndex(self):
            return GramaticaMatricesParser.RULE_fila

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFila" ):
                listener.enterFila(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFila" ):
                listener.exitFila(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFila" ):
                return visitor.visitFila(self)
            else:
                return visitor.visitChildren(self)




    def fila(self):

        localctx = GramaticaMatricesParser.FilaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_fila)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(GramaticaMatricesParser.T__6)
            self.state = 78
            self.match(GramaticaMatricesParser.NUMERO)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 79
                self.match(GramaticaMatricesParser.T__7)
                self.state = 80
                self.match(GramaticaMatricesParser.NUMERO)
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(GramaticaMatricesParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





